<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    >

    <FrameLayout
        android:id="@+id/main_title_framelayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:background="@color/gray"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-bold"
            android:text="@string/main_title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_title_framelayout"
        android:orientation="vertical"
        android:background="@color/gray"
        android:id="@+id/main_linerlayout"
        >

        <include
            layout="@layout/list_item"
             />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/toolbar_profile"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:clickable="true"
        android:visibility="invisible"
        >

        <TextView
            android:id="@+id/toolbar_profile_back"
            android:layout_width="@dimen/height_toolbar"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="15dp"
            android:text="@string/icon_back"
            android:textSize="25sp"
            android:textColor="@color/white"
            />

        <com.hanks.htextview.fall.FallTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_person"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:id="@+id/main_title_name"
            />

        <TextView
            android:id="@+id/main_message"
            android:layout_width="@dimen/height_toolbar"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="15dp"
            android:textSize="25sp"
            android:layout_alignParentRight="true"
            android:text="@string/icon_category"
            android:textColor="@color/white"
            />

    </RelativeLayout>
    <FrameLayout
        android:id="@+id/wrapper_profile_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:visibility="invisible"
        android:clickable="false"
        android:layout_alignParentBottom="true"
        >

    </FrameLayout>
</RelativeLayout>
