<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wrapper_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_view_avatar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_profile_image"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:paddingBottom="1dp"
        android:src="@drawable/carl" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image_view_avatar"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="姓名:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="性别:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize"

                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/sex"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="出生日期:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/date"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="参加工作时间:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize"
                    android:layout_gravity="center_vertical|left"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/work_time"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize"
                    android:layout_gravity="center_vertical|left"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="户口所在地:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/residence_address"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="现居住城市:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/live_address"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="手机号码:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/phone_num"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="邮箱地址:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="个人主页:"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/person_url"
                    android:textColor="@color/white"
                    android:textSize="@dimen/person_content_textsize" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_avatar_overlay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_profile_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />


</RelativeLayout>